--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "vite": "^7.2.4"
+    "jsdom": "^27.3.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.15"
   }
 }
